// ユーザーアカウント
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/userAccount";

import "google/protobuf/timestamp.proto";

message UserAccount {
  string user_id = 1;
  string name = 2;
  string password = 3;
  google.protobuf.Timestamp login_at = 4;
  google.protobuf.Timestamp logout_at = 5;
}
